Remove unnecessary NNs from notebooks

--- a/year_project/notebooks/neural-networks-filatov/test/ConvNeXt-Tiny.ipynb
+++ b/year_project/notebooks/neural-networks-filatov/test/ConvNeXt-Tiny.ipynb
@@ -423,146 +423,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5cf8141",
-   "metadata": {
-    "papermill": {
-     "duration": 0.007853,
-     "end_time": "2024-06-07T09:11:51.497483",
-     "exception": false,
-     "start_time": "2024-06-07T09:11:51.489630",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNet-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "73248d7f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-07T09:11:51.514963Z",
-     "iopub.status.busy": "2024-06-07T09:11:51.514634Z",
-     "iopub.status.idle": "2024-06-07T09:11:51.519446Z",
-     "shell.execute_reply": "2024-06-07T09:11:51.518605Z"
-    },
-    "papermill": {
-     "duration": 0.015946,
-     "end_time": "2024-06-07T09:11:51.521342",
-     "exception": false,
-     "start_time": "2024-06-07T09:11:51.505396",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnet50, ResNet50_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNet50_Weights.DEFAULT\n",
-    "# model = resnet50(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "# # scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.86)\n",
-    "# # scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=3e-4, steps_per_epoch=10, epochs=10)\n",
-    "\n",
-    "# num_epochs = 50\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ffd9cd65",
-   "metadata": {
-    "papermill": {
-     "duration": 0.007789,
-     "end_time": "2024-06-07T09:11:51.537188",
-     "exception": false,
-     "start_time": "2024-06-07T09:11:51.529399",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**EfficientNetV2 (S)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "ceb7e861",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-07T09:11:51.554525Z",
-     "iopub.status.busy": "2024-06-07T09:11:51.554234Z",
-     "iopub.status.idle": "2024-06-07T09:11:51.559221Z",
-     "shell.execute_reply": "2024-06-07T09:11:51.558388Z"
-    },
-    "papermill": {
-     "duration": 0.01603,
-     "end_time": "2024-06-07T09:11:51.561114",
-     "exception": false,
-     "start_time": "2024-06-07T09:11:51.545084",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import efficientnet_v2_m, EfficientNet_V2_M_Weights\n",
-    "\n",
-    "\n",
-    "# weights = EfficientNet_V2_M_Weights.DEFAULT\n",
-    "# model = efficientnet_v2_m(weights=weights).to(device)\n",
-    "# model.classifier[1] = nn.Linear(1280, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "# # scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.86)\n",
-    "# # scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=3e-4, steps_per_epoch=10, epochs=10)\n",
-    "\n",
-    "# num_epochs = 50\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ae7e2e91",
    "metadata": {
     "papermill": {
@@ -764,221 +624,6 @@
     "    else:\n",
     "        val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
     "        print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "72c63c84",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013269,
-     "end_time": "2024-06-07T17:57:49.759467",
-     "exception": false,
-     "start_time": "2024-06-07T17:57:49.746198",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**DenseNet-161**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "c29d9bb9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-07T17:57:49.788730Z",
-     "iopub.status.busy": "2024-06-07T17:57:49.788381Z",
-     "iopub.status.idle": "2024-06-07T17:57:49.793187Z",
-     "shell.execute_reply": "2024-06-07T17:57:49.792360Z"
-    },
-    "papermill": {
-     "duration": 0.021588,
-     "end_time": "2024-06-07T17:57:49.795056",
-     "exception": false,
-     "start_time": "2024-06-07T17:57:49.773468",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import densenet161, DenseNet161_Weights\n",
-    "\n",
-    "\n",
-    "# weights = DenseNet161_Weights.DEFAULT\n",
-    "# model = densenet161(weights=weights).to(device)\n",
-    "# model.classifier = nn.Linear(2208, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7bea795e",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013422,
-     "end_time": "2024-06-07T17:57:49.822344",
-     "exception": false,
-     "start_time": "2024-06-07T17:57:49.808922",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNeXt-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "dc23f0a6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-07T17:57:49.851103Z",
-     "iopub.status.busy": "2024-06-07T17:57:49.850621Z",
-     "iopub.status.idle": "2024-06-07T17:57:49.855360Z",
-     "shell.execute_reply": "2024-06-07T17:57:49.854457Z"
-    },
-    "papermill": {
-     "duration": 0.021193,
-     "end_time": "2024-06-07T17:57:49.857214",
-     "exception": false,
-     "start_time": "2024-06-07T17:57:49.836021",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnext50_32x4d, ResNeXt50_32X4D_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNeXt50_32X4D_Weights.DEFAULT\n",
-    "# model = resnext50_32x4d(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "13a9be2b",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013997,
-     "end_time": "2024-06-07T17:57:49.884720",
-     "exception": false,
-     "start_time": "2024-06-07T17:57:49.870723",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Model from PyTorch Image Models**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "76d7e8a7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-07T17:57:49.913835Z",
-     "iopub.status.busy": "2024-06-07T17:57:49.913500Z",
-     "iopub.status.idle": "2024-06-07T17:57:49.917385Z",
-     "shell.execute_reply": "2024-06-07T17:57:49.916669Z"
-    },
-    "papermill": {
-     "duration": 0.020523,
-     "end_time": "2024-06-07T17:57:49.919228",
-     "exception": false,
-     "start_time": "2024-06-07T17:57:49.898705",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install timm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "93ac70f4",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-07T17:57:49.948405Z",
-     "iopub.status.busy": "2024-06-07T17:57:49.947866Z",
-     "iopub.status.idle": "2024-06-07T17:57:49.952137Z",
-     "shell.execute_reply": "2024-06-07T17:57:49.951283Z"
-    },
-    "papermill": {
-     "duration": 0.020791,
-     "end_time": "2024-06-07T17:57:49.954019",
-     "exception": false,
-     "start_time": "2024-06-07T17:57:49.933228",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import timm\n",
-    "\n",
-    "# model = timm.create_model('ens_adv_inception_resnet_v2', pretrained=True, num_classes=23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=3, eta_min=3e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
    ]
   },
   {
@@ -1328,7 +973,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1342,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
