--- a/year_project/notebooks/neural-networks-filatov/test/DenseNet-161.ipynb
+++ b/year_project/notebooks/neural-networks-filatov/test/DenseNet-161.ipynb
@@ -423,202 +423,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e27e220",
-   "metadata": {
-    "papermill": {
-     "duration": 0.008229,
-     "end_time": "2024-06-08T07:11:38.703575",
-     "exception": false,
-     "start_time": "2024-06-08T07:11:38.695346",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNet-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f004f497",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T07:11:38.723320Z",
-     "iopub.status.busy": "2024-06-08T07:11:38.722520Z",
-     "iopub.status.idle": "2024-06-08T07:11:38.727246Z",
-     "shell.execute_reply": "2024-06-08T07:11:38.726415Z"
-    },
-    "papermill": {
-     "duration": 0.016316,
-     "end_time": "2024-06-08T07:11:38.728994",
-     "exception": false,
-     "start_time": "2024-06-08T07:11:38.712678",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnet50, ResNet50_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNet50_Weights.DEFAULT\n",
-    "# model = resnet50(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d9bdc392",
-   "metadata": {
-    "papermill": {
-     "duration": 0.008016,
-     "end_time": "2024-06-08T07:11:38.745473",
-     "exception": false,
-     "start_time": "2024-06-08T07:11:38.737457",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**EfficientNetV2 (S)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "db6e26ad",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T07:11:38.763023Z",
-     "iopub.status.busy": "2024-06-08T07:11:38.762713Z",
-     "iopub.status.idle": "2024-06-08T07:11:38.767357Z",
-     "shell.execute_reply": "2024-06-08T07:11:38.766449Z"
-    },
-    "papermill": {
-     "duration": 0.015413,
-     "end_time": "2024-06-08T07:11:38.769195",
-     "exception": false,
-     "start_time": "2024-06-08T07:11:38.753782",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import efficientnet_v2_s, EfficientNet_V2_S_Weights\n",
-    "\n",
-    "\n",
-    "# weights = EfficientNet_V2_S_Weights.DEFAULT\n",
-    "# model = efficientnet_v2_s(weights=weights).to(device)\n",
-    "# model.classifier[1] = nn.Linear(1280, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "\n",
-    "# num_epochs = 50\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "24420d04",
-   "metadata": {
-    "papermill": {
-     "duration": 0.008158,
-     "end_time": "2024-06-08T07:11:38.785542",
-     "exception": false,
-     "start_time": "2024-06-08T07:11:38.777384",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ConvNeXt (Tiny)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "ec512add",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T07:11:38.803557Z",
-     "iopub.status.busy": "2024-06-08T07:11:38.803280Z",
-     "iopub.status.idle": "2024-06-08T07:11:38.807991Z",
-     "shell.execute_reply": "2024-06-08T07:11:38.807076Z"
-    },
-    "papermill": {
-     "duration": 0.016197,
-     "end_time": "2024-06-08T07:11:38.809800",
-     "exception": false,
-     "start_time": "2024-06-08T07:11:38.793603",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import convnext_tiny, ConvNeXt_Tiny_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ConvNeXt_Tiny_Weights.DEFAULT\n",
-    "# model = convnext_tiny(weights=weights).to(device)\n",
-    "# model.classifier[2] = nn.Linear(768, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "c251819d",
    "metadata": {
     "papermill": {
@@ -818,157 +622,6 @@
     "    else:\n",
     "        val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
     "        print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b0ed0e48",
-   "metadata": {
-    "papermill": {
-     "duration": 0.014594,
-     "end_time": "2024-06-08T12:13:50.617329",
-     "exception": false,
-     "start_time": "2024-06-08T12:13:50.602735",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNeXt-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "bb0d35a2",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T12:13:50.648207Z",
-     "iopub.status.busy": "2024-06-08T12:13:50.647842Z",
-     "iopub.status.idle": "2024-06-08T12:13:50.653325Z",
-     "shell.execute_reply": "2024-06-08T12:13:50.652330Z"
-    },
-    "papermill": {
-     "duration": 0.023857,
-     "end_time": "2024-06-08T12:13:50.655420",
-     "exception": false,
-     "start_time": "2024-06-08T12:13:50.631563",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnext50_32x4d, ResNeXt50_32X4D_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNeXt50_32X4D_Weights.DEFAULT\n",
-    "# model = resnext50_32x4d(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e89711df",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013678,
-     "end_time": "2024-06-08T12:13:50.683254",
-     "exception": false,
-     "start_time": "2024-06-08T12:13:50.669576",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Model from PyTorch Image Models**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "ebafd8ad",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T12:13:50.712950Z",
-     "iopub.status.busy": "2024-06-08T12:13:50.712104Z",
-     "iopub.status.idle": "2024-06-08T12:13:50.716087Z",
-     "shell.execute_reply": "2024-06-08T12:13:50.715351Z"
-    },
-    "papermill": {
-     "duration": 0.02088,
-     "end_time": "2024-06-08T12:13:50.718071",
-     "exception": false,
-     "start_time": "2024-06-08T12:13:50.697191",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install timm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "849301bf",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T12:13:50.746968Z",
-     "iopub.status.busy": "2024-06-08T12:13:50.746612Z",
-     "iopub.status.idle": "2024-06-08T12:13:50.751299Z",
-     "shell.execute_reply": "2024-06-08T12:13:50.750436Z"
-    },
-    "papermill": {
-     "duration": 0.021487,
-     "end_time": "2024-06-08T12:13:50.753380",
-     "exception": false,
-     "start_time": "2024-06-08T12:13:50.731893",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import timm\n",
-    "\n",
-    "# model = timm.create_model('ens_adv_inception_resnet_v2', pretrained=True, num_classes=23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=3, eta_min=3e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
    ]
   },
   {
@@ -1318,7 +971,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1332,7 +985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
