--- a/year_project/notebooks/neural-networks-filatov/test/RegNetY-8GF.ipynb
+++ b/year_project/notebooks/neural-networks-filatov/test/RegNetY-8GF.ipynb
@@ -625,431 +625,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0124e43e",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013662,
-     "end_time": "2024-06-08T14:28:28.495960",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.482298",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNet-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "889d0afb",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:28:28.525426Z",
-     "iopub.status.busy": "2024-06-08T14:28:28.525122Z",
-     "iopub.status.idle": "2024-06-08T14:28:28.530213Z",
-     "shell.execute_reply": "2024-06-08T14:28:28.529444Z"
-    },
-    "papermill": {
-     "duration": 0.021936,
-     "end_time": "2024-06-08T14:28:28.532054",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.510118",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnet50, ResNet50_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNet50_Weights.DEFAULT\n",
-    "# model = resnet50(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "# # scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.86)\n",
-    "# # scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=3e-4, steps_per_epoch=10, epochs=10)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aac17407",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013733,
-     "end_time": "2024-06-08T14:28:28.559998",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.546265",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**EfficientNetV2 (S)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "c332ee10",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:28:28.589336Z",
-     "iopub.status.busy": "2024-06-08T14:28:28.588967Z",
-     "iopub.status.idle": "2024-06-08T14:28:28.593893Z",
-     "shell.execute_reply": "2024-06-08T14:28:28.593077Z"
-    },
-    "papermill": {
-     "duration": 0.021623,
-     "end_time": "2024-06-08T14:28:28.595750",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.574127",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import efficientnet_v2_m, EfficientNet_V2_M_Weights\n",
-    "\n",
-    "\n",
-    "# weights = EfficientNet_V2_M_Weights.DEFAULT\n",
-    "# model = efficientnet_v2_m(weights=weights).to(device)\n",
-    "# model.classifier[1] = nn.Linear(1280, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "# # scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.86)\n",
-    "# # scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=3e-4, steps_per_epoch=10, epochs=10)\n",
-    "\n",
-    "# num_epochs = 50\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "246077da",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013664,
-     "end_time": "2024-06-08T14:28:28.623290",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.609626",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ConvNeXt (Tiny)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "14a13fbd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:28:28.652293Z",
-     "iopub.status.busy": "2024-06-08T14:28:28.652024Z",
-     "iopub.status.idle": "2024-06-08T14:28:28.656851Z",
-     "shell.execute_reply": "2024-06-08T14:28:28.656030Z"
-    },
-    "papermill": {
-     "duration": 0.021233,
-     "end_time": "2024-06-08T14:28:28.658581",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.637348",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import convnext_tiny, ConvNeXt_Tiny_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ConvNeXt_Tiny_Weights.DEFAULT\n",
-    "# model = convnext_tiny(weights=weights).to(device)\n",
-    "# model.classifier[2] = nn.Linear(768, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "# # scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.86)\n",
-    "# # scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=3e-4, steps_per_epoch=10, epochs=10)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cec30881",
-   "metadata": {
-    "papermill": {
-     "duration": 0.014051,
-     "end_time": "2024-06-08T14:28:28.686580",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.672529",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**DenseNet-161**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "6970bb59",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:28:28.717225Z",
-     "iopub.status.busy": "2024-06-08T14:28:28.716960Z",
-     "iopub.status.idle": "2024-06-08T14:28:28.721311Z",
-     "shell.execute_reply": "2024-06-08T14:28:28.720483Z"
-    },
-    "papermill": {
-     "duration": 0.021121,
-     "end_time": "2024-06-08T14:28:28.723272",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.702151",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import densenet161, DenseNet161_Weights\n",
-    "\n",
-    "\n",
-    "# weights = DenseNet161_Weights.DEFAULT\n",
-    "# model = densenet161(weights=weights).to(device)\n",
-    "# model.classifier = nn.Linear(2208, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7cab3956",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013739,
-     "end_time": "2024-06-08T14:28:28.751047",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.737308",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNeXt-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "953cdbb5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:28:28.780156Z",
-     "iopub.status.busy": "2024-06-08T14:28:28.779903Z",
-     "iopub.status.idle": "2024-06-08T14:28:28.784138Z",
-     "shell.execute_reply": "2024-06-08T14:28:28.783383Z"
-    },
-    "papermill": {
-     "duration": 0.020771,
-     "end_time": "2024-06-08T14:28:28.785968",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.765197",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnext50_32x4d, ResNeXt50_32X4D_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNeXt50_32X4D_Weights.DEFAULT\n",
-    "# model = resnext50_32x4d(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9008fb41",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013793,
-     "end_time": "2024-06-08T14:28:28.813896",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.800103",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Model from PyTorch Image Models**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "a8df0e8f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:28:28.846900Z",
-     "iopub.status.busy": "2024-06-08T14:28:28.846098Z",
-     "iopub.status.idle": "2024-06-08T14:28:28.850993Z",
-     "shell.execute_reply": "2024-06-08T14:28:28.849995Z"
-    },
-    "papermill": {
-     "duration": 0.024857,
-     "end_time": "2024-06-08T14:28:28.852884",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.828027",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install timm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "db3d7926",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:28:28.891393Z",
-     "iopub.status.busy": "2024-06-08T14:28:28.891128Z",
-     "iopub.status.idle": "2024-06-08T14:28:28.895845Z",
-     "shell.execute_reply": "2024-06-08T14:28:28.894805Z"
-    },
-    "papermill": {
-     "duration": 0.02712,
-     "end_time": "2024-06-08T14:28:28.898845",
-     "exception": false,
-     "start_time": "2024-06-08T14:28:28.871725",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import timm\n",
-    "\n",
-    "# model = timm.create_model('ens_adv_inception_resnet_v2', pretrained=True, num_classes=23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=3, eta_min=3e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3d76da92",
    "metadata": {
     "papermill": {
@@ -1395,7 +970,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1409,7 +984,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
