--- a/year_project/notebooks/neural-networks-filatov/test/ResNeXt-50.ipynb
+++ b/year_project/notebooks/neural-networks-filatov/test/ResNeXt-50.ipynb
@@ -423,270 +423,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f4c3ac2",
-   "metadata": {
-    "papermill": {
-     "duration": 0.007692,
-     "end_time": "2024-06-08T07:13:05.029336",
-     "exception": false,
-     "start_time": "2024-06-08T07:13:05.021644",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNet-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "3598e947",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T07:13:05.047232Z",
-     "iopub.status.busy": "2024-06-08T07:13:05.046542Z",
-     "iopub.status.idle": "2024-06-08T07:13:05.051465Z",
-     "shell.execute_reply": "2024-06-08T07:13:05.050590Z"
-    },
-    "papermill": {
-     "duration": 0.01615,
-     "end_time": "2024-06-08T07:13:05.053338",
-     "exception": false,
-     "start_time": "2024-06-08T07:13:05.037188",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnet50, ResNet50_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNet50_Weights.DEFAULT\n",
-    "# model = resnet50(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "369abaea",
-   "metadata": {
-    "papermill": {
-     "duration": 0.008191,
-     "end_time": "2024-06-08T07:13:05.069566",
-     "exception": false,
-     "start_time": "2024-06-08T07:13:05.061375",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**EfficientNetV2 (S)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "d2f0fc3d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T07:13:05.086895Z",
-     "iopub.status.busy": "2024-06-08T07:13:05.086588Z",
-     "iopub.status.idle": "2024-06-08T07:13:05.091514Z",
-     "shell.execute_reply": "2024-06-08T07:13:05.090648Z"
-    },
-    "papermill": {
-     "duration": 0.015725,
-     "end_time": "2024-06-08T07:13:05.093369",
-     "exception": false,
-     "start_time": "2024-06-08T07:13:05.077644",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import efficientnet_v2_s, EfficientNet_V2_S_Weights\n",
-    "\n",
-    "\n",
-    "# weights = EfficientNet_V2_S_Weights.DEFAULT\n",
-    "# model = efficientnet_v2_s(weights=weights).to(device)\n",
-    "# model.classifier[1] = nn.Linear(1280, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "\n",
-    "# num_epochs = 50\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "61c46a43",
-   "metadata": {
-    "papermill": {
-     "duration": 0.007833,
-     "end_time": "2024-06-08T07:13:05.109213",
-     "exception": false,
-     "start_time": "2024-06-08T07:13:05.101380",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ConvNeXt (Tiny)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "319199f7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T07:13:05.126392Z",
-     "iopub.status.busy": "2024-06-08T07:13:05.126124Z",
-     "iopub.status.idle": "2024-06-08T07:13:05.130471Z",
-     "shell.execute_reply": "2024-06-08T07:13:05.129739Z"
-    },
-    "papermill": {
-     "duration": 0.015194,
-     "end_time": "2024-06-08T07:13:05.132339",
-     "exception": false,
-     "start_time": "2024-06-08T07:13:05.117145",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import convnext_tiny, ConvNeXt_Tiny_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ConvNeXt_Tiny_Weights.DEFAULT\n",
-    "# model = convnext_tiny(weights=weights).to(device)\n",
-    "# model.classifier[2] = nn.Linear(768, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8a1fa048",
-   "metadata": {
-    "papermill": {
-     "duration": 0.007822,
-     "end_time": "2024-06-08T07:13:05.148550",
-     "exception": false,
-     "start_time": "2024-06-08T07:13:05.140728",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**DenseNet-161**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "b252c31b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T07:13:05.165671Z",
-     "iopub.status.busy": "2024-06-08T07:13:05.165397Z",
-     "iopub.status.idle": "2024-06-08T07:13:05.171489Z",
-     "shell.execute_reply": "2024-06-08T07:13:05.170673Z"
-    },
-    "papermill": {
-     "duration": 0.016786,
-     "end_time": "2024-06-08T07:13:05.173367",
-     "exception": false,
-     "start_time": "2024-06-08T07:13:05.156581",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import densenet161, DenseNet161_Weights\n",
-    "\n",
-    "\n",
-    "# weights = DenseNet161_Weights.DEFAULT\n",
-    "# model = densenet161(weights=weights).to(device)\n",
-    "# model.classifier = nn.Linear(2208, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "e2240c35",
    "metadata": {
     "papermill": {
@@ -886,93 +622,6 @@
     "    else:\n",
     "        val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
     "        print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "de89432e",
-   "metadata": {
-    "papermill": {
-     "duration": 0.014204,
-     "end_time": "2024-06-08T11:09:27.633165",
-     "exception": false,
-     "start_time": "2024-06-08T11:09:27.618961",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Model from PyTorch Image Models**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "91718e8f",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T11:09:27.721298Z",
-     "iopub.status.busy": "2024-06-08T11:09:27.720940Z",
-     "iopub.status.idle": "2024-06-08T11:09:27.725400Z",
-     "shell.execute_reply": "2024-06-08T11:09:27.724529Z"
-    },
-    "papermill": {
-     "duration": 0.021328,
-     "end_time": "2024-06-08T11:09:27.727393",
-     "exception": false,
-     "start_time": "2024-06-08T11:09:27.706065",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install timm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "223386d1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T11:09:27.755960Z",
-     "iopub.status.busy": "2024-06-08T11:09:27.755645Z",
-     "iopub.status.idle": "2024-06-08T11:09:27.760165Z",
-     "shell.execute_reply": "2024-06-08T11:09:27.759405Z"
-    },
-    "papermill": {
-     "duration": 0.020915,
-     "end_time": "2024-06-08T11:09:27.762034",
-     "exception": false,
-     "start_time": "2024-06-08T11:09:27.741119",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import timm\n",
-    "\n",
-    "# model = timm.create_model('ens_adv_inception_resnet_v2', pretrained=True, num_classes=23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=3, eta_min=3e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
    ]
   },
   {
@@ -1322,7 +971,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1336,7 +985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
