--- a/year_project/notebooks/neural-networks-filatov/test/ResNet-50.ipynb
+++ b/year_project/notebooks/neural-networks-filatov/test/ResNet-50.ipynb
@@ -628,361 +628,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30a7f110",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013547,
-     "end_time": "2024-06-08T10:15:57.130777",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.117230",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**EfficientNetV2 (S)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "981df6f3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T10:15:57.158622Z",
-     "iopub.status.busy": "2024-06-08T10:15:57.158324Z",
-     "iopub.status.idle": "2024-06-08T10:15:57.163531Z",
-     "shell.execute_reply": "2024-06-08T10:15:57.162596Z"
-    },
-    "papermill": {
-     "duration": 0.021487,
-     "end_time": "2024-06-08T10:15:57.165514",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.144027",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import efficientnet_v2_m, EfficientNet_V2_M_Weights\n",
-    "\n",
-    "\n",
-    "# weights = EfficientNet_V2_M_Weights.DEFAULT\n",
-    "# model = efficientnet_v2_m(weights=weights).to(device)\n",
-    "# model.classifier[1] = nn.Linear(1280, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "# # scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.86)\n",
-    "# # scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=3e-4, steps_per_epoch=10, epochs=10)\n",
-    "\n",
-    "# num_epochs = 50\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1b203ed9",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013215,
-     "end_time": "2024-06-08T10:15:57.192271",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.179056",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ConvNeXt (Tiny)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "deb9f5ed",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T10:15:57.220097Z",
-     "iopub.status.busy": "2024-06-08T10:15:57.219839Z",
-     "iopub.status.idle": "2024-06-08T10:15:57.224602Z",
-     "shell.execute_reply": "2024-06-08T10:15:57.223790Z"
-    },
-    "papermill": {
-     "duration": 0.020854,
-     "end_time": "2024-06-08T10:15:57.226511",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.205657",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import convnext_tiny, ConvNeXt_Tiny_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ConvNeXt_Tiny_Weights.DEFAULT\n",
-    "# model = convnext_tiny(weights=weights).to(device)\n",
-    "# model.classifier[2] = nn.Linear(768, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "# # scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.86)\n",
-    "# # scheduler = torch.optim.lr_scheduler.OneCycleLR(optimizer, max_lr=3e-4, steps_per_epoch=10, epochs=10)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55133485",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013234,
-     "end_time": "2024-06-08T10:15:57.253289",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.240055",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**DenseNet-161**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "0d681fc7",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T10:15:57.281182Z",
-     "iopub.status.busy": "2024-06-08T10:15:57.280915Z",
-     "iopub.status.idle": "2024-06-08T10:15:57.285531Z",
-     "shell.execute_reply": "2024-06-08T10:15:57.284699Z"
-    },
-    "papermill": {
-     "duration": 0.020674,
-     "end_time": "2024-06-08T10:15:57.287325",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.266651",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import densenet161, DenseNet161_Weights\n",
-    "\n",
-    "\n",
-    "# weights = DenseNet161_Weights.DEFAULT\n",
-    "# model = densenet161(weights=weights).to(device)\n",
-    "# model.classifier = nn.Linear(2208, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ed79f1fd",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013205,
-     "end_time": "2024-06-08T10:15:57.314390",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.301185",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNeXt-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "01b0ecbd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T10:15:57.344043Z",
-     "iopub.status.busy": "2024-06-08T10:15:57.343381Z",
-     "iopub.status.idle": "2024-06-08T10:15:57.347797Z",
-     "shell.execute_reply": "2024-06-08T10:15:57.347017Z"
-    },
-    "papermill": {
-     "duration": 0.021359,
-     "end_time": "2024-06-08T10:15:57.349519",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.328160",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnext50_32x4d, ResNeXt50_32X4D_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNeXt50_32X4D_Weights.DEFAULT\n",
-    "# model = resnext50_32x4d(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3fa8a6d6",
-   "metadata": {
-    "papermill": {
-     "duration": 0.013224,
-     "end_time": "2024-06-08T10:15:57.376934",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.363710",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Model from PyTorch Image Models**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "506ec996",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T10:15:57.405176Z",
-     "iopub.status.busy": "2024-06-08T10:15:57.404870Z",
-     "iopub.status.idle": "2024-06-08T10:15:57.408549Z",
-     "shell.execute_reply": "2024-06-08T10:15:57.407768Z"
-    },
-    "papermill": {
-     "duration": 0.019875,
-     "end_time": "2024-06-08T10:15:57.410402",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.390527",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install timm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "6aedcaa1",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T10:15:57.438328Z",
-     "iopub.status.busy": "2024-06-08T10:15:57.438094Z",
-     "iopub.status.idle": "2024-06-08T10:15:57.442566Z",
-     "shell.execute_reply": "2024-06-08T10:15:57.441826Z"
-    },
-    "papermill": {
-     "duration": 0.020554,
-     "end_time": "2024-06-08T10:15:57.444390",
-     "exception": false,
-     "start_time": "2024-06-08T10:15:57.423836",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import timm\n",
-    "\n",
-    "# model = timm.create_model('ens_adv_inception_resnet_v2', pretrained=True, num_classes=23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=3, eta_min=3e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "a0b33cbe",
    "metadata": {
     "papermill": {
@@ -1328,7 +973,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1342,7 +987,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
