--- a/year_project/notebooks/neural-networks-filatov/test/SwinV2-Tiny.ipynb
+++ b/year_project/notebooks/neural-networks-filatov/test/SwinV2-Tiny.ipynb
@@ -423,406 +423,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ef2c55b",
-   "metadata": {
-    "papermill": {
-     "duration": 0.008553,
-     "end_time": "2024-06-08T14:05:02.841399",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:02.832846",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNet-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "f177bc19",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:05:02.860494Z",
-     "iopub.status.busy": "2024-06-08T14:05:02.859933Z",
-     "iopub.status.idle": "2024-06-08T14:05:02.864747Z",
-     "shell.execute_reply": "2024-06-08T14:05:02.863846Z"
-    },
-    "papermill": {
-     "duration": 0.016527,
-     "end_time": "2024-06-08T14:05:02.866798",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:02.850271",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnet50, ResNet50_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNet50_Weights.DEFAULT\n",
-    "# model = resnet50(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db7182f0",
-   "metadata": {
-    "papermill": {
-     "duration": 0.00865,
-     "end_time": "2024-06-08T14:05:02.884268",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:02.875618",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**EfficientNetV2 (S)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "97c5adb6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:05:02.903093Z",
-     "iopub.status.busy": "2024-06-08T14:05:02.902796Z",
-     "iopub.status.idle": "2024-06-08T14:05:02.907775Z",
-     "shell.execute_reply": "2024-06-08T14:05:02.906892Z"
-    },
-    "papermill": {
-     "duration": 0.016896,
-     "end_time": "2024-06-08T14:05:02.909863",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:02.892967",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import efficientnet_v2_s, EfficientNet_V2_S_Weights\n",
-    "\n",
-    "\n",
-    "# weights = EfficientNet_V2_S_Weights.DEFAULT\n",
-    "# model = efficientnet_v2_s(weights=weights).to(device)\n",
-    "# model.classifier[1] = nn.Linear(1280, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "\n",
-    "# num_epochs = 50\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6c71265d",
-   "metadata": {
-    "papermill": {
-     "duration": 0.008536,
-     "end_time": "2024-06-08T14:05:02.927117",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:02.918581",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ConvNeXt (Tiny)**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "7802b12d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:05:02.945929Z",
-     "iopub.status.busy": "2024-06-08T14:05:02.945568Z",
-     "iopub.status.idle": "2024-06-08T14:05:02.950275Z",
-     "shell.execute_reply": "2024-06-08T14:05:02.949427Z"
-    },
-    "papermill": {
-     "duration": 0.016196,
-     "end_time": "2024-06-08T14:05:02.952117",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:02.935921",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import convnext_tiny, ConvNeXt_Tiny_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ConvNeXt_Tiny_Weights.DEFAULT\n",
-    "# model = convnext_tiny(weights=weights).to(device)\n",
-    "# model.classifier[2] = nn.Linear(768, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0298dedd",
-   "metadata": {
-    "papermill": {
-     "duration": 0.008891,
-     "end_time": "2024-06-08T14:05:02.969766",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:02.960875",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**DenseNet-161**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "76f9ec24",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:05:02.989034Z",
-     "iopub.status.busy": "2024-06-08T14:05:02.988288Z",
-     "iopub.status.idle": "2024-06-08T14:05:02.993282Z",
-     "shell.execute_reply": "2024-06-08T14:05:02.992408Z"
-    },
-    "papermill": {
-     "duration": 0.01667,
-     "end_time": "2024-06-08T14:05:02.995151",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:02.978481",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import densenet161, DenseNet161_Weights\n",
-    "\n",
-    "\n",
-    "# weights = DenseNet161_Weights.DEFAULT\n",
-    "# model = densenet161(weights=weights).to(device)\n",
-    "# model.classifier = nn.Linear(2208, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "15fb1cd5",
-   "metadata": {
-    "papermill": {
-     "duration": 0.009338,
-     "end_time": "2024-06-08T14:05:03.013532",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:03.004194",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**ResNeXt-50**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "1ba62406",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:05:03.033395Z",
-     "iopub.status.busy": "2024-06-08T14:05:03.032557Z",
-     "iopub.status.idle": "2024-06-08T14:05:03.037712Z",
-     "shell.execute_reply": "2024-06-08T14:05:03.036807Z"
-    },
-    "papermill": {
-     "duration": 0.017367,
-     "end_time": "2024-06-08T14:05:03.039700",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:03.022333",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import resnext50_32x4d, ResNeXt50_32X4D_Weights\n",
-    "\n",
-    "\n",
-    "# weights = ResNeXt50_32X4D_Weights.DEFAULT\n",
-    "# model = resnext50_32x4d(weights=weights).to(device)\n",
-    "# model.fc = nn.Linear(2048, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1089c306",
-   "metadata": {
-    "papermill": {
-     "duration": 0.008737,
-     "end_time": "2024-06-08T14:05:03.057806",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:03.049069",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**MaxVit-T**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "f4475bc9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T14:05:03.077485Z",
-     "iopub.status.busy": "2024-06-08T14:05:03.076850Z",
-     "iopub.status.idle": "2024-06-08T14:05:03.081734Z",
-     "shell.execute_reply": "2024-06-08T14:05:03.080901Z"
-    },
-    "papermill": {
-     "duration": 0.016715,
-     "end_time": "2024-06-08T14:05:03.083549",
-     "exception": false,
-     "start_time": "2024-06-08T14:05:03.066834",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# from torchvision.models import maxvit_t, MaxVit_T_Weights\n",
-    "\n",
-    "\n",
-    "# weights = MaxVit_T_Weights.DEFAULT\n",
-    "# model = maxvit_t(weights=weights).to(device)\n",
-    "# model.classifier[5] = nn.Linear(512, 23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4, weight_decay=5e-5)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=1, eta_min=1e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "    \n",
-    "#     if VALIDATION:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')\n",
-    "#     else:\n",
-    "#         val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
-    "#         print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "ac597c79",
    "metadata": {
     "papermill": {
@@ -1022,93 +622,6 @@
     "    else:\n",
     "        val_loss[epoch], val_accuracy[epoch] = test(test_dataloader, model, criterion, epoch, num_epochs)\n",
     "        print(f'\\tTest  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dc60e064",
-   "metadata": {
-    "papermill": {
-     "duration": 0.016491,
-     "end_time": "2024-06-08T18:56:17.976529",
-     "exception": false,
-     "start_time": "2024-06-08T18:56:17.960038",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "source": [
-    "**Model from PyTorch Image Models**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "c1e5baa5",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T18:56:18.010491Z",
-     "iopub.status.busy": "2024-06-08T18:56:18.010184Z",
-     "iopub.status.idle": "2024-06-08T18:56:18.014252Z",
-     "shell.execute_reply": "2024-06-08T18:56:18.013324Z"
-    },
-    "papermill": {
-     "duration": 0.023343,
-     "end_time": "2024-06-08T18:56:18.016176",
-     "exception": false,
-     "start_time": "2024-06-08T18:56:17.992833",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# !pip install timm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "f82fae73",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-06-08T18:56:18.050422Z",
-     "iopub.status.busy": "2024-06-08T18:56:18.050181Z",
-     "iopub.status.idle": "2024-06-08T18:56:18.054547Z",
-     "shell.execute_reply": "2024-06-08T18:56:18.053754Z"
-    },
-    "papermill": {
-     "duration": 0.023742,
-     "end_time": "2024-06-08T18:56:18.056355",
-     "exception": false,
-     "start_time": "2024-06-08T18:56:18.032613",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# import timm\n",
-    "\n",
-    "# model = timm.create_model('ens_adv_inception_resnet_v2', pretrained=True, num_classes=23).to(device)\n",
-    "\n",
-    "# criterion = nn.CrossEntropyLoss()\n",
-    "# optimizer = torch.optim.Adam(model.parameters(), lr=3e-4)  # , momentum=0.9, weight_decay=0.0005\n",
-    "# # scheduler = None\n",
-    "# scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.5)\n",
-    "# # scheduler = torch.optim.lr_scheduler.CosineAnnealingLR(optimizer, T_max=3, eta_min=3e-6)\n",
-    "\n",
-    "# num_epochs = 30\n",
-    "\n",
-    "# train_loss, train_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "# val_loss, val_accuracy = (np.zeros(num_epochs), np.zeros(num_epochs))\n",
-    "\n",
-    "# for epoch in range(num_epochs):\n",
-    "#     train_loss[epoch], train_accuracy[epoch] = train(train_dataloader, model, criterion, optimizer, scheduler, epoch, num_epochs)\n",
-    "#     val_loss[epoch], val_accuracy[epoch] = test(val_dataloader, model, criterion, epoch, num_epochs)\n",
-    "    \n",
-    "#     print(f'\\n>>> Epoch {epoch+1}\\n\\tTrain\\tloss: {train_loss[epoch]:.4f},  accuracy: {100 * train_accuracy[epoch]:.2f}')\n",
-    "#     print(f'\\tVal  \\tloss: {val_loss[epoch]:.4f},  accuracy: {100 * val_accuracy[epoch]:.2f}')"
    ]
   },
   {
@@ -1458,7 +971,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1472,7 +985,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   },
   "papermill": {
    "default_parameters": {},
